fetching menu from server and displaying cards dynamically

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
 			href="assets/css/main.css"
 		/>
 
-		<script defer src="assets/js/axios.js"></script>
-		<script defer src="assets/js/hammer.js"></script>
-		<script defer src="assets/js/swiper.js"></script>
-		<script defer src="assets/js/main.js"></script>
+
 	</head>
 	<body>
 		<div class="tinder">
@@ -37,32 +34,7 @@
 				<i class="fa fa-heart"></i>
 			</div>
 
-			<div class="tinder--cards">
-				<div class="tinder--card">
-					<img src="https://placeimg.com/600/300/people" />
-					<h3>Demo card 1</h3>
-					<p>This is a demo for Tinder like swipe cards</p>
-				</div>
-				<div class="tinder--card">
-					<img src="https://placeimg.com/600/300/animals" />
-					<h3>Demo card 2</h3>
-					<p>This is a demo for Tinder like swipe cards</p>
-				</div>
-				<div class="tinder--card">
-					<img src="https://placeimg.com/600/300/nature" />
-					<h3>Demo card 3</h3>
-					<p>This is a demo for Tinder like swipe cards</p>
-				</div>
-				<div class="tinder--card">
-					<img src="https://placeimg.com/600/300/tech" />
-					<h3>Demo card 4</h3>
-					<p>This is a demo for Tinder like swipe cards</p>
-				</div>
-				<div class="tinder--card">
-					<img src="https://placeimg.com/600/300/arch" />
-					<h3>Demo card 5</h3>
-					<p>This is a demo for Tinder like swipe cards</p>
-				</div>
+			<div class="tinder--cards" id="tinder-cards">
 			</div>
 
 			<div class="tinder--buttons">
@@ -72,4 +44,9 @@
 			</div>
 		</div>
 	</body>
+	<script src="assets/js/axios.js"></script>
+	<script src="assets/js/hammer.js"></script>
+	<script src="assets/js/swiper.js"></script>
+	<script src="assets/js/main.js"></script>
+	
 </html>
