new look and improving

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf?v=4.2.0
         https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular
     -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
 		<link
 			href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -19,23 +23,48 @@
 			media="screen"
 		/>
 		<link
+			href="https://fonts.googleapis.com/css?family=Oswald:400"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Oswald:300"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
 			rel="stylesheet"
 			type="text/css"
 			media="screen"
 			href="assets/css/main.css"
 		/>
-
-
 	</head>
 	<body>
+		<div class="container">
+			<div class="row text-center">
+				<h2 style='color: #fff;'>Também disponível em</h2>
+				<br />
+				<p>
+					<a href="#" class="btn btn-store">
+						<span class="fa fa-apple fa-3x pull-left"></span>
+						<span class="btn-label">Download em</span>
+						<span class="btn-caption">App Store</span>
+					</a>
+					<a href="#" class="btn btn-store">
+						<span class="fa fa-android fa-3x pull-left"></span>
+						<span class="btn-label">Download em</span>
+						<span class="btn-caption">Google Play</span>
+					</a>
+				</p>
+			</div>
+		</div>
 		<div class="tinder">
 			<div class="tinder--status">
 				<i class="fa fa-remove"></i>
 				<i class="fa fa-heart"></i>
 			</div>
 
-			<div class="tinder--cards" id="tinder-cards">
-			</div>
+			<div class="tinder--cards" id="tinder-cards"></div>
 
 			<div class="tinder--buttons">
 				<button id="sliders"><i class="fa fa-sliders"></i></button>
@@ -48,5 +77,4 @@
 	<script src="assets/js/hammer.js"></script>
 	<script src="assets/js/swiper.js"></script>
 	<script src="assets/js/main.js"></script>
-	
 </html>
