fixes to image display and getting the coordinates from the user

--- a/categories.html
+++ b/categories.html
@@ -44,28 +44,28 @@
                 <h1 style="color: #fff; font-weight:bolder;">Categorias</h1>
                 <ul class="list-group">
                   <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href="index.html?category=ara" class="font-30">Árabe</a>
+                    <a href="index.html?categories=ara" class="font-30">Árabe</a>
                     <div class="image-parent">
                         <img src="https://static-images.ifood.com.br/image/upload/f_auto,t_low/discoveries/19C1-arabe.jpg" class="img-fluid rounded-circle img-rounded" alt="arabe">
                     </div>
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a href="index.html?category=chi" class="font-30">Chinesa</a>
+                    <a href="index.html?categories=chi" class="font-30">Chinesa</a>
                     <div class="image-parent">
                         <img src="https://static-images.ifood.com.br/image/upload/f_auto,t_low/discoveries/19C1-chinesa.jpg" class="img-fluid rounded-circle img-rounded" alt="chinesa">
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center">  
-                    <a href="index.html?category=jap" class="font-30">Japonesa</a>
+                    <a href="index.html?categories=jap" class="font-30">Japonesa</a>
                     <div class="image-parent">
                         <img src="https://static-images.ifood.com.br/image/upload/f_auto,t_low/discoveries/19C1-japonesa.jpg" class="img-fluid rounded-circle img-rounded" alt="japonesa">
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center">  
-                    <a href="index.html?category=piz" class="font-30">Pizza</a>
+                    <a href="index.html?categories=piz" class="font-30">Pizza</a>
                     <div class="image-parent">
                         <img src="https://static-images.ifood.com.br/image/upload/f_auto,t_low/discoveries/19C1-pizza.jpg" class="img-fluid rounded-circle img-rounded" alt="pizza">
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center">  
-                    <a href="index.html?category=lch" class="font-30">Lanches</a>
+                    <a href="index.html?categories=lch" class="font-30">Lanches</a>
                     <div class="image-parent">
                         <img src="https://static-images.ifood.com.br/image/upload/f_auto,t_low/discoveries/19C1-lanches-v2.jpg" class="img-fluid rounded-circle img-rounded" alt="lanches">
                   </li>
