--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</head>
 	<body>
 		<br/>
-		<div class="spinner"></div>
+		<div id="spinner" class="spinner"></div>
 		<div class="container d-flex justify-content-center align-content-center">
 			<div class="col">
 				<div
